# work_order

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_INITIALIZATION_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  LICENSE  LOGIN_INFO.md  P1_TESTING_INFRASTRUCTURE.md  PERMISSIONS.md  PERMISSIONS_BEST_PRACTICES.md  PLATE_MAKING_PROCESS_LOGIC_ANALYSIS.md  PROCESS_BUILTIN_FEATURE.md  PROCESS_DATA_COMPARISON.md  PROCESS_MODEL_FIELDS.md  QUICKSTART.md  README.md  SECURITY.md  TASK_GENERATION_RULES_ANALYSIS.md  TASK_MANAGEMENT_ANALYSIS.md  USER_ROLE_GUIDE.md  WORKORDER_LOGIC_REDESIGN_ANALYSIS.md  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  start.sh  turbo.json  vitest.config.ts
.claude/: .gitignore  README.md  settings.json  settings.json.bak  settings.md
.cursor/: README.md
.planning/: 05-06-SUMMARY.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-ROADMAP.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
backend/: .env.development.example  .env.example  .env.production.example  SERVER_STARTUP.md  requirements.txt  simple_monitoring_test.py  test_monitoring.py  test_performance.py
deployment/: gunicorn.conf.py  nginx.conf  prometheus.yml
docs/: ADMIN_FIX_SUMMARY.md  ADMIN_GUIDE.md  API_DOCUMENTATION.md  APPROVAL_VALIDATION_ENHANCEMENT.md  ARCHITECTURE_DOCUMENTATION.md  ARCHITECTURE_IMPROVEMENT.md  AUDIT_LOG_SUMMARY.md  (+106 more)
(+817 files in other folders)
